k3s/kraken-ci/dev/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "*"
spec:
  template:
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
